--- a/FirstTest/app/src/main/res/values/strings.xml
+++ b/FirstTest/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">FirstTest</string>
+    <string name="app_name1">FirstTest</string>
+    <string name="app_name2">DrawView</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 </resources>
